--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
         <span style="--i:3"><img src="./assets/DSC_0082.JPG" alt=""></span>
         <span style="--i:4"><img src="./assets/DSC_0238.JPG" alt=""></span>
         <span style="--i:5"><img src="./assets/DSC_0277.JPG" alt=""></span>
+        <span style="--i:12"><img src="./assets/im3.jpg" alt=""></span>
         <span style="--i:6"><img src="./assets/DSC_0278.JPG" alt=""></span>
         <span style="--i:7"><img src="./assets/DSC_0293.JPG" alt=""></span>
         <span style="--i:8"><img src="./assets/DSC_0314.JPG" alt=""></span>
         <span style="--i:9"><img src="./assets/DSC_0359.JPG" alt=""></span>
+        <span style="--i:10"><img src="./assets/m1.jpg" alt=""></span>
+        <span style="--i:11"><img src="./assets/im2.jpg" alt=""></span>
+       
+        
     </div>
 </body>
 </html>
